add link to presentation

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 </h5>
                 <h2 class="red down-100">OpenRefine</h2>
                 <h3 class=" down-25">Eine Einführung in 22.5 Minuten</h3>
+                <h5 class="down-50"><a href="https://digicademy.github.io/ISS2021_OpenRefine/">https://digicademy.github.io/ISS2021_OpenRefine</a></h5>
                <!-- <h5 class="down-25"><!-\-Präsentation-\-> <a href="#"
                     title="View the presentation online"
                     ></a><!-\-<br />Daten <a
