--- a/index.html
+++ b/index.html
@@ -108,22 +108,31 @@ cil VII-2
 CIL VII,2
 </code></pre>
                 <p>☞ <code>Facet</code> ▸ <code>Text facet</code></p>
+                <blockquote>Faceting allows you to look for patterns and trends. Facets are essentially aspects or angles of data variance in a given column.</blockquote>
+                <p class="x-small right">☞ <a href="https://docs.openrefine.org/manual/facets" target="_blank">Exploring facets</a></p>
             </div>
             <div class="step">
                 <h2 class="red">Tabellen reinigen</h2>
                 <div class="row">
-                    <div class="twalve columns">
+                    <div class="four columns">
                         <figure class="mfp-lightbox"><a href="resources/img/tabelle.png"><img src="resources/img/tabelle.png" alt="tabelle" style="width:25rem"></a></figure>
-                        
+                        <div><p class="x-small centered">Daten importieren: <a href="resources/ISS_table.xls" target="_blank">ISS_table.xls</a></p></div> 
                     </div>
-                    <p class="x-small">Daten importieren: <a href="resources/ISS_table.xls">ISS_table.xls</a><br/>
-                    ☞ <a href="https://docs.openrefine.org/manual/cellediting#cluster-and-edit">Clustering methods</a>
+                    <div class="eight columns">
+                        <blockquote class="medium">Creating a facet on a column is a great way to look for inconsistencies in your data; clustering is a great way to fix those inconsistencies.</blockquote>
+                        <p class="x-small right">☞ <a href="https://docs.openrefine.org/manual/cellediting#cluster-and-edit" target="_blank">Cluster and edit</a>
+                            </p>
+                        <blockquote class="medium">You don’t need to understand the details behind each clustering method to apply them successfully to your data. The order in which these methods are presented in the interface and on this page is the order we recommend - starting with the most strict rules and moving to the most lax, which require more human supervision to apply correctly.</blockquote>
+                            <p class="x-small right">☞ <a href="https://docs.openrefine.org/manual/cellediting#clustering-methods" target="_blank">Clustering methods</a>
+                        </p>
+                        
+                </div>
                 </div>
             </div>   
             <div class="step">
                 <h2 class="red">Datenabgleich (reconciliation)</h2>
                 <blockquote class="medium">Reconciliation is the process of matching your dataset with that of an external source. Datasets for comparison might be produced by libraries, archives, museums, academic organizations, scientific institutions, non-profits, or interest groups. You can also reconcile against user-edited data on Wikidata, or reconcile against a local dataset that you yourself supply.</blockquote>
-                <p class="x-small right"><a href="https://docs.openrefine.org/manual/reconciling">Reconciling</a>
+                <p class="x-small right">☞ <a href="https://docs.openrefine.org/manual/reconciling" target="_blank">Reconciling</a>
                 <pre><code class="linenumbers">Buber, Martin
 Kafka, Franz
 Wiese, Christian
