make your presentation more beautiful

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@ CIL VII,2
                         <div><p class="x-small centered">Daten importieren: <a href="resources/ISS_table.xls" target="_blank">ISS_table.xls</a></p></div> 
                     </div>
                     <div class="eight columns">
-                        <blockquote class="medium">Creating a facet on a column is a great way to look for inconsistencies in your data; clustering is a great way to fix those inconsistencies.</blockquote>
+                        <blockquote class="small down-25">Creating a facet on a column is a great way to look for inconsistencies in your data; clustering is a great way to fix those inconsistencies.</blockquote>
                         <p class="x-small right">☞ <a href="https://docs.openrefine.org/manual/cellediting#cluster-and-edit" target="_blank">Cluster and edit</a>
                             </p>
-                        <blockquote class="medium">You don’t need to understand the details behind each clustering method to apply them successfully to your data. The order in which these methods are presented in the interface and on this page is the order we recommend - starting with the most strict rules and moving to the most lax, which require more human supervision to apply correctly.</blockquote>
+                        <blockquote class="small down-50">You don’t need to understand the details behind each clustering method to apply them successfully to your data. The order in which these methods are presented in the interface and on this page is the order we recommend - starting with the most strict rules and moving to the most lax, which require more human supervision to apply correctly.</blockquote>
                             <p class="x-small right">☞ <a href="https://docs.openrefine.org/manual/cellediting#clustering-methods" target="_blank">Clustering methods</a>
                         </p>
                         
