reconcile date of presentation

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </div>
         <div id="impress">
             <div class="step">
-                <h5><strong>2021-10-06</strong> | 
-                        <strong>ISS
+                <h5><strong>2021-10-07</strong> | 
+                    <strong><a href="https://iss.adwmainz.net/2021/">ISS</a>
                     </strong>
                 </h5>
                 <h2 class="red down-100">OpenRefine</h2>
