beautify lobid link

--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@ Wiese, Christian
                 <p class="x-small">☞ <a href="https://lobid.org/gnd/reconcile/" target="_blank">GND
                         reconciliation for OpenRefine</a> Align your data with the Integrated
                     Authority File GND: </p>
-                <pre><code class="text">https://lobid.org/gnd/reconcile/</code></pre>
+                <pre class="xml"><code class="linenumbers">https://lobid.org/gnd/reconcile/
+</code></pre>
                 <p class="x-small">☞ <strong>Export</strong> angereicherter Daten (jetzt noch
                     weißer) </p>
             </div>
