add movie emoji

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Wiese, Christian
                     weißer) </p>
             </div>
             <div class="step">
-                <h2 class="red">Beispiel: In 2 Minuten zur GND-ID</h2>
+                <h2 class="red">🎥 In 2 Minuten zur GND-ID</h2>
                 <div class="row">
                     <div class="12 columns">
                         <video width="800" controls>
